metadata/sf-prod/force-app/main/default/objects/QC_Job__c/QC_Job__c.object-meta.xml
<CustomObject>
    <description>Keeps information about QC jobs executed on QC Server</description>
    <label>QC Job</label>
    <nameField>
        <label>QC Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>