metadata/sf-prod/force-app/main/default/objects/QC_Job__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date/time when QC job completed</description>
    <inlineHelpText>Date/time when QC job completed</inlineHelpText>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>