metadata/sf-prod/force-app/main/default/objects/QC_Job__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <description>Unique ID of a QC job started on QC Server</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID of a QC job started on QC Server</inlineHelpText>
    <label>Job ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>