metadata/sf-prod/force-app/main/default/objects/QC_Job__c/fields/QC_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>QC_Record_Id__c</fullName>
    <description>Id of the record being QCed</description>
    <inlineHelpText>Id of the record being QCed</inlineHelpText>
    <label>QC Record Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>