metadata/sf-prod/force-app/main/default/objects/QC_Job__c/fields/QC_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>QC_Record_Type__c</fullName>
    <description>Type of the record being QCed</description>
    <inlineHelpText>Type of the record being QCed</inlineHelpText>
    <label>QC Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>