metadata/sf-prod/force-app/main/default/objects/QC_Job__c/fields/Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Started_Date__c</fullName>
    <description>Date when QC job started</description>
    <inlineHelpText>Date when QC job started</inlineHelpText>
    <label>Started Date</label>
    <type>DateTime</type>
</CustomField>