metadata/sf-prod/force-app/main/default/objects/QC_Job__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State of the job (progress, failed, succeeded)</description>
    <inlineHelpText>State of the job (progress, failed, succeeded)</inlineHelpText>
    <label>State</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>