metadata/sf-prod/force-app/main/default/objects/QC_Job__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the job as reported by the QC server</description>
    <inlineHelpText>Status of the job as reported by the QC server</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>